add log for debug

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
 				<configuration>
 					<quiet>true</quiet>
 					<additionalparam>-Xdoclint:none</additionalparam>
+					<javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
 				</configuration>
 				<executions>
 					<execution>
