--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 			<type>test-jar</type>
 		</dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-examples-streaming_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
@@ -355,10 +361,10 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.rat</groupId>
 				<artifactId>apache-rat-plugin</artifactId>
-				<version>0.10</version><!--$NO-MVN-MAN-VER$-->
+				<version>0.10</version>&lt;!&ndash;$NO-MVN-MAN-VER$&ndash;&gt;
 				<inherited>false</inherited>
 				<executions>
 					<execution>
@@ -372,7 +378,7 @@
 					<excludeSubProjects>false</excludeSubProjects>
 					<numUnapprovedLicenses>0</numUnapprovedLicenses>
 					<licenses>
-						<!-- Enforce this license:
+						&lt;!&ndash; Enforce this license:
 							Copyright 2015 data Artisans GmbH
 
 							Licensed under the Apache License, Version 2.0 (the "License");
@@ -386,7 +392,7 @@
 							WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 							See the License for the specific language governing permissions and
 							limitations under the License.
-						-->
+						&ndash;&gt;
 						<license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
 							<licenseFamilyCategory>AL2 </licenseFamilyCategory>
 							<licenseFamilyName>Apache License 2.0</licenseFamilyName>
@@ -403,25 +409,25 @@
 						</licenseFamily>
 					</licenseFamilies>
 					<excludes>
-						<!-- Additional files like .gitignore etc.-->
+						&lt;!&ndash; Additional files like .gitignore etc.&ndash;&gt;
 						<exclude>**/.*</exclude>
 						<exclude>**/*.prefs</exclude>
 						<exclude>**/*.properties</exclude>
 						<exclude>**/*.log</exclude>
 						<exclude>*.txt/**</exclude>
-						<!-- Administrative files in the main trunk. -->
+						&lt;!&ndash; Administrative files in the main trunk. &ndash;&gt;
 						<exclude>**/README.md</exclude>
 						<exclude>CHANGELOG</exclude>
-						<!-- Build files -->
+						&lt;!&ndash; Build files &ndash;&gt;
 						<exclude>**/*.iml</exclude>
-						<!-- Generated content -->
+						&lt;!&ndash; Generated content &ndash;&gt;
 						<exclude>**/target/**</exclude>
 						<exclude>**/build/**</exclude>
 					</excludes>
 				</configuration>
-			</plugin>
+			</plugin>-->
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>3.0.0</version>
@@ -438,7 +444,7 @@
 					<configLocation>/tools/maven/checkstyle.xml</configLocation>
 					<logViolationsToConsole>true</logViolationsToConsole>
 				</configuration>
-			</plugin>
+			</plugin>-->
 			<!-- We use the maven-shade plugin to create a fat jar that contains all dependencies
 			except flink and it's transitive dependencies. The resulting fat-jar can be executed
 			on a cluster. Change the value of Program-Class if your program entry point changes. -->
